tests/pass/int_to_double_autocast.kl
num dez = 10; // nter literal assigned to num var: should autocast to double

fn inisiu() {
    mostra(dez);
}
